# anvil-solana

./: .gitignore  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vercel.json
anvil-protocol/: Anchor.toml
app/: Dockerfile  index.html  package.json  vite.config.ts
app/src/: App.tsx  index.css
backend/: .env.example  Dockerfile  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
bot/: .env.example  Dockerfile  package.json
bot/prisma/: schema.prisma
bot/src/: config.ts  index.ts  logger.ts  recovery.ts  validate.ts
chat/: package.json
chat/src/: chatTools.ts  config.ts  crankerClient.ts  index.ts  validate.ts
cranker/: .env.example  Dockerfile  package.json
cranker/src/: config.ts  index.ts
programs/anvil-protocol/: Cargo.toml
programs/anvil-protocol/src/: constants.rs  errors.rs  events.rs  helpers.rs  lib.rs
programs/anvil-protocol/src/instructions/: claim.rs  close_vault.rs  create_vault.rs  deposit_fees.rs  initialize_platform.rs  mod.rs  push_batch.rs  update_distribution.rs  update_platform.rs  withdraw_for_lp.rs  withdraw_treasury.rs
programs/anvil-protocol/src/state/: claim_account.rs  distribution_state.rs  mod.rs  platform_config.rs  vault.rs
vanity/: Dockerfile  package.json
vanity/prisma/: schema.prisma
vanity/src/: config.ts  crypto.ts  grinder.ts  index.ts  pool.ts
video/: package-lock.json  package.json  tsconfig.json
video/src/: AiLayer.tsx  AnvilIntro.tsx  CreateVaultVideo.tsx  Cursor.tsx  DistributionFlow.tsx  HowLaunchingWorks.tsx  (+9 more)
(+137 files in other folders)
