[package]
name = "anvil-protocol"
version = "0.1.0"
description = "Anvil Protocol - Trustless fee distribution via Merkle claims"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anvil_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
solana-sha256-hasher = "2.2"
